--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="top-banner">
+        <div class="container">'
+            <div class="small-bold-text banner-text">
+                This landing page is similar to Range Rovar official page👌
+            </div>
+        </div>
+    </div>
 
+    <nav>
+        <div class="container main-nav">
+            <a href="#" class="company-logo">
+                <img src="./img/download.png" alt="company-logo">
+            </a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#"></a>Home</li>
+                    <li><a href="#"></a>Explore</li>
+                    <li><a href="#"></a>Centers</li>
+                    <li><a href="#"></a>Contact Us</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header>
+        <div class="container">
+
+
+        </div>
+    </header>
+
+    <section class="companies-setion">
+        <div class="container">
+
+        </div>
+    </section>
+
+    <section class="features-section"></section>
+
+    <section class="big-features-section"></section>
+    <section class="big-features-section"></section>
+    <section class="big-features-section"></section>
+
+    <section class="examples-section"></section>
+
+    <section class="cta-section ></section>
+
+    <footer></footer>
+    <div class="subfooter"></div>
+
+    <script src="https://kit.fontawesome.com/4d1635608b.js" crossorigin="anonymous"></script>
+</body>
+</html>
